<resources>
    <string name="app_name">bookthehsrp</string>
    <string name="home_desc">HSRP or the High Security Registration Plate is a special type of number plate which has been made compulsory to be installed in all types of vehicles by Government of India as per CMVR 1989 Act Rule Number 50. HSRP is an aluminum-place that provides your vehicle strong security as it is fitted with a non-removable snap-on lock that is difficult to replace.</string>
    <string name="home_title">Book Your High Security Registration Plate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_text_about_us">According to new guidelines by the Ministry of Road Transport and Highways, Government of India, It is mandatory to install High Security Registration Plate (HSRP) in all 2/4 Wheelers and other heavy vehicles.</string>
    <string name="about_us_main_text">Main purpose of this is to automate all Vehicle Registration and Driving License related activities in transport authorities of the country with introduction of smart card technology to handle issues like inter state transport vehicle movement and to create state and national level registers of vehicles/DL information. Latest initiative by GOI has been to centralize both these applications for ensuring higher transparency, security and reliability of operations through a countrywide unified database and provision of a highly citizen and trade centric web enabled environment. High-Security Registration Plate is a new type of number plate which is made of aluminium. These plates are tamper-proof and come with two non-reusable locks. The number plates will have a chromium-based Ashoka Chakra on the left, along with \'IND\' written. A sticker with number plate will also be found in the 4 wheelers or Heavy Motor vehicle, which you will have to put on the lead of your car, in which the name of the registration authority, registration number, permanent identification number of the brand and the first date of registration</string>
    <string name="objective_1">1 . Better services to the Transport Department as well as citizens.</string>
    <string name="objective_2">2 . Quick implementation of government policies from time to time.</string>
    <string name="objective_3">3 . Instant access of Vehicle/DL information to other government departments.</string>
</resources>